--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,8 +37,12 @@ jobs:
       - name: Build package
         run: pnpm build
 
-      - name: Run tests
-        run: pnpm test
+      - name: Run unit tests
+        run: pnpm test:unit
+
+      - name: Run integration tests (Ubuntu only)
+        if: runner.os == 'Linux'
+        run: pnpm test:integration
 
       - name: Type check
         run: pnpm typecheck
