chore: update deps and docs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Setup Docker on Windows/macOS (Linux has it by default)
-      - name: Set up Docker
-        uses: docker/setup-docker-action@v4
-        if: runner.os != 'Linux'
-
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
@@ -45,7 +40,9 @@ jobs:
       - name: Run unit tests
         run: pnpm test:unit
 
-      - name: Run integration tests
+      # Integration tests require Docker - only available on Linux GA runners
+      - name: Run integration tests (Linux only)
+        if: runner.os == 'Linux'
         run: pnpm test:integration
         timeout-minutes: 10
 
